# nq-bot

./: .env.prod  .gitignore  README.md  bot.py  config.py  pyproject.toml  utils.py
plugins/bt/: __init__.py
plugins/core/: __init__.py
plugins/dmhy/: __init__.py
plugins/gpt/: __init__.py
plugins/hikari/: __init__.py
plugins/javbus/: __init__.py
plugins/lolicon/: __init__.py
plugins/weather/: __init__.py
